[package]
name = "spotify-launcher"
version = "0.1.0"
edition = "2021"
description = "Client for spotify's apt repository in Rust for Arch Linux"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kpcyrd/spotify-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
ar = "0.9.0"
bytes = "1.1.0"
clap = { version = "3.1.16", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.9.0"
libflate = "1.2.0"
log = "0.4.17"
nix = { version = "0.24.1", default-features = false, features = ["process"] }
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread", "process"] }
xch = "1.1.0"
