[package]
name = "spotify-launcher"
version = "0.6.0"
edition = "2021"
description = "Client for spotify's apt repository in Rust for Arch Linux"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kpcyrd/spotify-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
ar = "0.9.0"
bytes = "1.1.0"
clap = { version = "4", features = ["derive"] }
dirs = "5"
env_logger = "0.11"
libflate = "2"
lzma-rs = "0.3.0"
log = "0.4.17"
nix = { version = "0.29", default-features = false, features = ["process"] }
reqwest = "0.12"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread", "process", "time", "fs"] }
toml = "0.8"
xch = "1.1.0"
